objects/AcctSeed__Address__c/AcctSeed__Address__c.object-meta.xml
<CustomObject>
    <description>A set of saved addresses used to override default Origin and Destination addresses.</description>
    <label>Address</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>