objects/AcctSeed__Address__c/fields/AcctSeed__City__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__City__c</fullName>
    <label>City</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>