objects/AcctSeed__Address__c/fields/AcctSeed__Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Postal_Code__c</fullName>
    <label>Postal Code</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>