objects/AcctSeed__Address__c/fields/AcctSeed__State_Province__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__State_Province__c</fullName>
    <label>State/Province</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>