objects/AcctSeed__Address__c/fields/AcctSeed__Street__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Street__c</fullName>
    <label>Street</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>